--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <title>Pseudo-code Your Day</title>
 
   <!-- CSS -->
+  <link rel="stylesheet" href="./assets/css/reset.css">
   <link rel="stylesheet" href="./assets/css/styles.css">
+
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,7 +22,7 @@
       <p id="date">Tuesday, May 34th, 2024</p>
     </div>
 
-    <div> <!-- container for logo thing -->
+    <div class="logo-container"> <!-- container for logo thing -->
       <h1>// pseudo-code</h1>
       <h2>your day</h2>
     </div>
